[package]
name = "INDA22PlusPlus-antmag-hw3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.7"
prost = "0.10"
protoc-rust = "2"
protoc-bin-vendored = "3.0.0"
prost-build = "0.11.1"

[build-dependencies]
